--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "dependencies": {
     "@fastly/remix-server-adapter": "^2.0.2",
     "@fastly/remix-server-runtime": "^2.0.2",
+    "@highlight-run/remix": "^0.1.0",
+    "@remix-run/node": "^1.19.2",
     "@remix-run/react": "^1.19.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
